--- a/src/main/res/layout/layout_face_detection.xml
+++ b/src/main/res/layout/layout_face_detection.xml
@@ -5,7 +5,7 @@
 
     <org.opencv.android.JavaCameraView
         android:id="@+id/java_camera_view"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
